# address_book_fastapi

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml
.github/workflows/: ci.yaml
src/: config.py  database.py  main.py  models.py  schemas.py
src/routers/: address.py
