[tool.poetry]
name = "address_book_fastapi"
version = "0.1.0"
description = "An address book with minimal FastAPI"
authors = ["Luke Clark Andrada <lcmandrada@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.9"
fastapi = {extras = ["all"], version = "^0.75.1"}
SQLAlchemy = "^1.4.34"
GeoAlchemy2 = "^0.11.1"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.1.0"
mypy = "^0.931"
flake8 = "^4.0.1"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[tool.isort]
py_version = "39"
src_paths = ["src", "tests"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.black]
target-version = ["py38"]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
